--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/permissions_fragment"
-        android:name="com.google.mediapipe.examples.facelandmarker.fragment.PermissionsFragment"
+        android:name="com.qali.ipoint.fragment.PermissionsFragment"
         android:label="PermissionsFragment">
 
         <action
@@ -34,7 +34,7 @@
 
     <fragment
         android:id="@+id/camera_fragment"
-        android:name="com.google.mediapipe.examples.facelandmarker.fragment.CameraFragment"
+        android:name="com.qali.ipoint.fragment.CameraFragment"
         android:label="CameraFragment">
 
         <action
@@ -46,6 +46,6 @@
 
     <fragment
         android:id="@+id/gallery_fragment"
-        android:name="com.google.mediapipe.examples.facelandmarker.fragment.GalleryFragment"
+        android:name="com.qali.ipoint.fragment.GalleryFragment"
         android:label="GalleryFragment" />
 </navigation>
