--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,10 +42,26 @@
             app:destination="@id/permissions_fragment"
             app:popUpTo="@id/camera_fragment"
             app:popUpToInclusive="true" />
+
+        <action
+            android:id="@+id/action_camera_to_settings"
+            app:destination="@id/settings_fragment" />
     </fragment>
 
     <fragment
         android:id="@+id/gallery_fragment"
         android:name="com.qali.ipoint.fragment.GalleryFragment"
         android:label="GalleryFragment" />
+
+    <fragment
+        android:id="@+id/settings_fragment"
+        android:name="com.qali.ipoint.fragment.SettingsFragment"
+        android:label="Settings">
+
+        <action
+            android:id="@+id/action_settings_to_camera"
+            app:destination="@id/camera_fragment"
+            app:popUpTo="@id/camera_fragment"
+            app:popUpToInclusive="false" />
+    </fragment>
 </navigation>
