--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -561,7 +561,7 @@
                 android:text="Use One Eye Detection"
                 android:textSize="14sp" />
 
-            <androidx.appcompat.widget.Switch
+            <Switch
                 android:id="@+id/use_one_eye_toggle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
